# screen-recorder

./: .gitignore  CMakeLists.txt  README.md  main.cpp  platform.txt
cmd/: CMakeLists.txt  main.cpp
cmd_screen_recorder/: CMakeLists.txt  main.cpp
qt_screen_recorder/: CMakeLists.txt  Info.plist  main.cpp  main.qml  qml.qrc  qtquickcontrols2.conf
qt_screen_recorder/backend/: CMakeLists.txt  backend.cpp  backend.h
qt_screen_recorder/components/: ConfigPanel.qml  ConfigPanel.qml.autosave  ControlPanel.qml  ErrorDialog.qml  PermissionsSetupPanel.qml  ScreenRegionSelector.qml  components.qrc
qt_screen_recorder/components/MaterialDesignIcon/: MaterialDesignIcon.qml
qt_screen_recorder/src/: backend.cpp  backend.h
screen-recorder/: CMakeLists.txt
screen-recorder/include/: device_service.h  recording_service.h
screen-recorder/src/device_service/: input_device.cpp  input_device.h  permission_status.h
screen-recorder/src/device_service/linux/: device_service_linux.cpp
screen-recorder/src/device_service/macos/: avfoundation_bridge.h  avfoundation_bridge.mm  device_service_macos.cpp
screen-recorder/src/device_service/windows/: device_service_windows.cpp
screen-recorder/src/recording_service/: device_context.cpp  device_context.h  error.h  ffmpeg_objects_deleter.cpp  ffmpeg_objects_deleter.h  recording_config.cpp  recording_config.h  recording_service_impl.cpp  recording_service_impl.h  recording_utils.cpp
screen-recorder/src/recording_service/packet_capturer/: packet_capturer.cpp  packet_capturer.h
screen-recorder/src/recording_service/process_chain/: decoder_ring.cpp  decoder_ring.h  encoder_ring.cpp  encoder_ring.h  filter_ring.cpp  filter_ring.h  muxer_ring.cpp  muxer_ring.h  process_chain.cpp  process_chain.h  process_context.cpp  process_context.h  swresample_filter_ring.cpp  swresample_filter_ring.h  swscale_filter_ring.cpp  swscale_filter_ring.h  vfcrop_filter_ring.cpp  vfcrop_filter_ring.h
src/device_service/: device_service.h  input_device.h
src/device_service/linux/: device_service_linux.cpp
src/device_service/macos/: avfoundation_bridge.mm  device_service_macos.cpp
src/device_service/windows/: device_service_windows.cpp
src/recording_service/: device_context.cpp  device_context.h  error.cpp  error.h  input_streaming_context.h  output_streaming_context.h  process_chain.cpp  process_chain.h  recording_init.cpp  recording_service.cpp  recording_service.h  recording_service_best.cpp  recording_service_clone.cpp  recording_service_pts_frame.cpp  recording_transcode.cpp  recording_utils.cpp  stream_context.cpp  stream_context.h
src/recording_service/process_chain/: decoder_ring.cpp  decoder_ring.h  encoder_ring.cpp  encoder_ring.h  filter_ring.cpp  filter_ring.h  muxer_ring.cpp  muxer_ring.h  process_chain.cpp  process_chain.h  process_context.h  process_ring.cpp  process_ring.h  swresample_filter_ring.cpp  swresample_filter_ring.h  swscale_filter_ring.cpp  swscale_filter_ring.h
